[gd_scene load_steps=7 format=2]

[ext_resource path="res://Resources/Roboto-Black.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/LevelSelect.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Background/stagnets_sprites.png" type="Texture" id=3]
[ext_resource path="res://Resources/music/short-song.mp3" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 8, 8, 118, 48 )

[node name="LevelSelect" type="Node2D"]
script = ExtResource( 2 )

[node name="Button" type="Button" parent="."]
margin_left = 232.0
margin_top = 97.0
margin_right = 491.0
margin_bottom = 151.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 1 )
text = "Level 1"
icon = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 233.0
margin_top = 251.0
margin_right = 492.0
margin_bottom = 305.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 1 )
text = "Level 2"
icon = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="."]
margin_left = 234.0
margin_top = 396.0
margin_right = 493.0
margin_bottom = 450.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 1 )
text = "Level 3"
icon = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true

[connection signal="pressed" from="Button" to="." method="load_level2"]
[connection signal="pressed" from="Button2" to="." method="load_level1"]
[connection signal="pressed" from="Button3" to="." method="load_level3"]
